[package]
name = "imu-sensors"
version = "0.1.0"
edition = "2024"
authors = ["Martin Budden"]
license = "MIT OR Apache-2.0"


[features]
# stm32 = ["embassy-stm32"]
rp2040 = ["embassy-rp"]
# esp32 = ["esp-hal", "esp-hal-embassy", "esp-backtrace", "esp-println"]
# NOTE: feature names taken directly from c++ library #defines, need to ascertain the Rust naming convention
USE_IMU_LSMDS63TR_C = []
USE_IMU_ISM330DHCX = []
USE_IMU_LSM6DSOX = []
LIBRARY_SENSORS_IMU_FIXED_AXES_XPOS_YPOS_ZPOS = []
LIBRARY_SENSORS_IMU_FIXED_AXES_YNEG_XPOS_ZPOS = []

[dependencies]
# Use embedded-hal for I2C/SPI traits
embedded-hal = "1.0.0"
# Example: Add a specific sensor driver if needed
# mpu9250 = "0.25.0"
# bmi160 = "0.3.0"
# imu-fusion = "0.2.6"
# imu-calib = "0.1.0"   

# Core Embassy executor and concurrency primitives
embassy-executor = { version = "0.10.0", features = ["executor-thread"] }
embassy-sync = "0.8.0"
embassy-time = "0.5.0"

# Hardware-specific Embassy HAL (example for Raspberry Pi RP2040)
embassy-rp = { version = "0.9.0", optional = true, features = ["rp2040", "time-driver"] }   
# embassy-stm32 = { version = "0.5.0", optional = true, features = ["stm32f4xx", "time-driver"] } 

# For logging and panic handling
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
# STM32/RP2040 logging
defmt = "1.0.1"
defmt-rtt = "1.1.0"
# ESP32 logging
# esp-println = { version = "0.16.1", optional = true, features = ["log"] }

# Embedded HAL traits (often re-exported by embassy-rp)
embedded-hal-async = "1.0.0"

log = "0.4"

cfg-if = "1.0"   

vector-quaternion-matrix = { git = "https://github.com/martinbudden/Crate-vector_quaternion_matrix" }

strum = "0.28.0"
strum_macros = "0.28.0"

[dev-dependencies]
# assert_float_eq = "1.2.0" # used for test

# see https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
opt-level = 0
debug = true
#split-debuginfo = '...'  # Platform-specific.
strip = "none"
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
#split-debuginfo = '...'  # Platform-specific.
strip = "none"
debug-assertions = false
overflow-checks = false
lto = false
panic = 'abort'
incremental = false
codegen-units = 16
rpath = false

[profile.release-lto]
inherits = "release"
lto = true
